Complete RateTvShow method

--- a/BooksAndMovies.WebUI/Views/Book/Detail.cshtml
+++ b/BooksAndMovies.WebUI/Views/Book/Detail.cshtml
@@ -4,11 +4,11 @@
 <div id="bookDetail">
 
     <div class="row">
-        <div class="col-md-2">
+        <div class="col-sm-12 col-md-3 col-lg-2">
             <img src="@(Model.ImageLinks.Thumbnail ?? Model.ImageLinks.SmallThumbnail)" alt="Book Image" />
         </div>
 
-        <div class="col-md-8 mt-3">
+        <div class="col-sm-12 col-md-9 col-lg-10">
             <h5>Book Details</h5>
 
             <p>
