--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                                 <li><a class="dropdown-item" asp-action="GetWishList" asp-controller="TVShow"> Wishlist </a></li>
                                 <li><a class="dropdown-item" asp-action="GetWatchedList" asp-controller="TVShow"> Watched </a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="TVShow" asp-action="Search"> Search </a></li>
-                                <li><a class="dropdown-item" href="#"> Rate </a></li>
+                                <li><a class="dropdown-item" asp-controller="TVShow" asp-action="Rate"> Rate </a></li>
                                 <li><a class="dropdown-item" asp-action="GetFavouriteTVShows" asp-controller="TVShow"> Favourites </a></li>
                             </ul>
                         </li>
