--- a/BooksAndMovies.WebUI/Views/Shared/_MovieListPartial.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_MovieListPartial.cshtml
@@ -13,7 +13,7 @@
     {
         if (movie.BackdropPath != null)
         {
-            <div class="col-md-3">
+            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
                 <div id="movie">
                     <form method="post">
                         <img src="@movie.BackdropPath" alt="movie Image" />
