--- a/BooksAndMovies.WebUI/Views/TVShow/Detail.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Detail.cshtml
@@ -4,11 +4,11 @@
 <div id="tvShowDetail">
 
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-sm-12 col-md-6 col-lg-4">
             <img src="https://image.tmdb.org/t/p/w500/@Model.PosterPath" alt="Tv Show Image" />
         </div>
 
-        <div class="col-md-8 mt-3">
+        <div class="col-sm-12 col-md-6 col-lg-8 mt-3">
             <h5>TV Show Details</h5>
 
             <p>
