Complete RateMovie methods

--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                                 <li><a class="dropdown-item" asp-action="GetWishList" asp-controller="Movie"> Wishlist </a></li>
                                 <li><a class="dropdown-item" asp-action="GetWatchedList" asp-controller="Movie"> Watched </a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Search"> Search </a></li>
-                                <li><a class="dropdown-item" href="#"> Rate </a></li>
+                                <li><a class="dropdown-item" asp-controller="Movie" asp-action="Rate"> Rate </a></li>
                                 <li><a class="dropdown-item" asp-action="GetFavouriteMovies" asp-controller="Movie"> Favourites </a></li>
 
                             </ul>
