--- a/BooksAndMovies.WebUI/Views/Movie/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/Movie/Search.cshtml
@@ -23,6 +23,8 @@
                     <div id="movie">
                         <form method="post">
                             <img src="https://image.tmdb.org/t/p/w500/@movie.PosterPath" alt="Movie Image" />
+                            <input type="hidden" name="id" asp-for="@movie.Id" />
+                            <input type="hidden" name="realId" asp-for="@movie.RealId" />
                             <input type="hidden" name="title" value="@movie.Title" />
                             <input type="hidden" name="originalTitle" asp-for="@movie.OriginalTitle" />
                             <input type="hidden" name="overview" asp-for="@movie.Overview" />
