--- a/BooksAndMovies.WebUI/Views/Shared/_TVShowListPartial.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_TVShowListPartial.cshtml
@@ -15,20 +15,9 @@
                 <div id="tvShow">
                     <form method="post">
                         <img src="@tvShow.BackdropPath" alt="tvShow Image" />
-                        <input type="hidden" name="id" asp-for="@tvShow.Id" />
-                        <input type="hidden" name="realId" asp-for="@tvShow.RealId" />
-                        <input type="hidden" name="name" asp-for="@tvShow.Name" />
-                        <input type="hidden" name="originalName" asp-for="@tvShow.OriginalName" />
-                        <input type="hidden" name="overview" asp-for="@tvShow.Overview" />
-                        <input type="hidden" name="posterPath" asp-for="@tvShow.PosterPath" />
-                        <input type="hidden" name="backdropPath" asp-for="@tvShow.BackdropPath" />
-                        <input type="hidden" name="firstAirDate" asp-for="@tvShow.FirstAirDate" />
-                        <input type="hidden" name="voteAverage" asp-for="@tvShow.VoteAverage" />
-                        <input type="hidden" name="voteCount" asp-for="@tvShow.VoteCount" />
-                        <input type="hidden" name="popularity" asp-for="@tvShow.Popularity" />
-                        <h4>@tvShow.Name </h4>
-                        <p>@tvShow.OriginalName</p>
-                        <p>@tvShow.VoteAverage</p>
+                        @await Html.PartialAsync("_TVShowInputsPartial", tvShow)
+
+                        
                         @if (Model.TVShowListType == "Wishlist")
                         {
                             <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="MoveTVShowToWatchedlist"> Move to watchedlist</button>
