--- a/BooksAndMovies.WebUI/Views/TVShow/Rate.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Rate.cshtml
@@ -36,13 +36,14 @@ else
                 {
                     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
                         <div id="tvShow">
-                            
+                            <form method="post">
                                 <img src="https://image.tmdb.org/t/p/w500/@tvShow.BackdropPath" alt="tvShow Image" />
-
+                                <input type="hidden" name="id" id="id" value="@tvShow.Id"/>
                                 <h4>@tvShow.Name </h4>
                                 <p>@tvShow.OriginalName</p>
                                 <p> <i class="fa fa-star" aria-hidden="true"></i>  @tvShow.VoteAverage</p>
-                            
+                                <input type="submit" class="btn btn-danger btn-sm btn-sm mb-2" value="Delete Rating"  asp-action="DeleteRating" />
+                            </form>
                         </div>
                     </div>
                 }
