--- a/BooksAndMovies.WebUI/Views/TVShow/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Search.cshtml
@@ -26,21 +26,8 @@
                     <div id="tvShow">
                         <form method="post">
                             <img src="https://image.tmdb.org/t/p/w500/@tvShow.PosterPath" alt="tvShow Image" />
-                            <input type="hidden" name="id" asp-for="@tvShow.Id" />
-                            <input type="hidden" name="realId" asp-for="@tvShow.RealId" />
-                            <input type="hidden" name="name" asp-for="@tvShow.Name" />
-                            <input type="hidden" name="originalName" asp-for="@tvShow.OriginalName" />
-                            <input type="hidden" name="overview" asp-for="@tvShow.Overview" />
-                            <input type="hidden" name="posterPath" asp-for="@tvShow.PosterPath" />
-                            <input type="hidden" name="backdropPath" asp-for="@tvShow.BackdropPath" />
-                            <input type="hidden" name="firstAirDate" asp-for="@tvShow.FirstAirDate" />
-                            <input type="hidden" name="voteAverage" asp-for="@tvShow.VoteAverage" />
-                            <input type="hidden" name="voteCount" asp-for="@tvShow.VoteCount" />
-                            <input type="hidden" name="popularity" asp-for="@tvShow.Popularity" />
+                            @await Html.PartialAsync("_TVShowInputsPartial", tvShow)
 
-                            <h3>@tvShow.Name </h3>
-                            <p>@tvShow.OriginalName</p>
-                            <p>@tvShow.VoteAverage</p>
                             <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddTVShowToWishList">Add to Wishlist</button>
                             <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddTVShowToWatchedList">Add to Watchedlist</button>
                             <button type="submit" class="btn btn-info btn-sm mb-2" asp-action="TVShowDetail"><i class="fa fa-eye" aria-hidden="true"></i></button>
