--- a/BooksAndMovies.WebUI/Views/Shared/_MovieInputsPartial.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_MovieInputsPartial.cshtml
@@ -4,12 +4,12 @@
 
 <input type="hidden" name="id" asp-for="@Model.Id" />
 <input type="hidden" name="realId" asp-for="@Model.RealId" />
-<input type="hidden" name="name" asp-for="@Model.Title" />
-<input type="hidden" name="originalName" asp-for="@Model.OriginalTitle" />
+<input type="hidden" name="title" asp-for="@Model.Title" />
+<input type="hidden" name="originalTitle" asp-for="@Model.OriginalTitle" />
 <input type="hidden" name="overview" asp-for="@Model.Overview" />
 <input type="hidden" name="posterPath" asp-for="@Model.PosterPath" />
 <input type="hidden" name="backdropPath" asp-for="@Model.BackdropPath" />
-<input type="hidden" name="firstAirDate" asp-for="@Model.ReleaseDate" />
+<input type="hidden" name="releaseDate" asp-for="@Model.ReleaseDate" />
 <input type="hidden" name="voteAverage" asp-for="@Model.VoteAverage" />
 <input type="hidden" name="voteCount" asp-for="@Model.VoteCount" />
 <input type="hidden" name="popularity" asp-for="@Model.Popularity" />
