--- a/BooksAndMovies.WebUI/Views/Home/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     {
         if (movie.PosterPath != null)
         {
-            <div class="col-md-3">
+            <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
                 <div id="movie">
                     <form method="post">
                         <img src="https://image.tmdb.org/t/p/w500/@movie.PosterPath" alt="Movie Image" />
