--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -60,33 +60,38 @@
                             </ul>
                         </li>
                     </ul>
+
+                    <div class="d-flex">
+                        <a class="btn btn-primary m-2" asp-action="Register" asp-controller="User">Register</a>
+                        <a class="btn btn-success m-2" asp-action="Login" asp-controller="User">Login</a>
+                    </div>
                 </div>
             </div>
         </nav>
 
 
-        </header>
+    </header>
 
 
 
+    <div class="container">
+
+        <main role="main" class="pb-3">
+
+            @RenderBody()
+        </main>
+    </div>
+
+
+
+    <footer class="border-top footer text-muted">
         <div class="container">
-
-            <main role="main" class="pb-3">
-
-                @RenderBody()
-            </main>
+            &copy; 2021 - BooksAndMovies - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-
-
-
-        <footer class="border-top footer text-muted">
-            <div class="container">
-                &copy; 2021 - BooksAndMovies - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            </div>
-        </footer>
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-        @await RenderSectionAsync("Scripts", required: false)
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
