--- a/BooksAndMovies.WebUI/Views/User/Register.cshtml
+++ b/BooksAndMovies.WebUI/Views/User/Register.cshtml
@@ -28,8 +28,12 @@
         <label asp-for="Password" class="form-label"> Password</label>
         <input asp-for="Password" type="password" class="form-control">
         <span asp-validation-for="Password"></span>
-
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
+
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <span>@TempData["SuccessMessage"]</span>
+    }
 </form>
