Complete the login method

--- a/BooksAndMovies.WebUI/Views/User/Login.cshtml
+++ b/BooksAndMovies.WebUI/Views/User/Login.cshtml
@@ -1,6 +1,32 @@
-﻿
+﻿@model User
 
 
 
 
 <h3>Login page</h3>
+
+<div asp-validation-summary="ModelOnly"></div>
+<form method="post" asp-action="Login">
+    <div class="mb-3">
+        <label asp-for="Email" class="form-label">Email address</label>
+        <input class="form-control" asp-for="Email">
+        <span asp-validation-for="Email"></span>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Password" class="form-label"> Password</label>
+        <input asp-for="Password" type="password" class="form-control">
+        <span asp-validation-for="Password"></span>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Submit</button>
+
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <span class="alert alert-success">@TempData["SuccessMessage"]</span>
+    }
+    else if (TempData["ErrorMessage"] != null)
+    {
+        <span class="alert alert-danger">@TempData["ErrorMessage"]</span>
+    }
+</form>
