--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http;
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -63,8 +64,20 @@
                     </ul>
 
                     <div class="d-flex">
-                        <a class="btn btn-primary m-2" asp-action="Register" asp-controller="User">Register</a>
-                        <a class="btn btn-success m-2" asp-action="Login" asp-controller="User">Login</a>
+                        @if (Context.Session.GetString("email") != null)
+                        {
+                            string firstname = Context.Session.GetString("firstname");
+                            <div class="m-auto">
+                                <span>Welcome @firstname</span>
+                            </div>
+                            <a class="btn btn-secondary m-2" asp-action="Logout" asp-controller="User">Logout</a>
+                        }
+                        else
+                        {
+                            <a class="btn btn-primary m-2" asp-action="Register" asp-controller="User">Register</a>
+                            <a class="btn btn-success m-2" asp-action="Login" asp-controller="User">Login</a>
+                        }
+
                     </div>
                 </div>
             </div>
@@ -87,10 +100,10 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - BooksAndMovies - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - BooksAndMovies
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
