--- a/BooksAndMovies.WebUI/Views/Home/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/Home/Index.cshtml
@@ -16,21 +16,14 @@
                 <div id="movie">
                     <form method="post">
                         <img src="https://image.tmdb.org/t/p/w500/@movie.PosterPath" alt="Movie Image" />
-                        <input type="hidden" name="id" asp-for="@movie.Id" />
-                        <input type="hidden" name="title" asp-for="@movie.Title" />
-                        <input type="hidden" name="originalTitle" asp-for="@movie.OriginalTitle" />
-                        <input type="hidden" name="overview" asp-for="@movie.Overview" />
-                        <input type="hidden" name="posterPath" asp-for="@movie.PosterPath" />
-                        <input type="hidden" name="backdropPath" asp-for="@movie.BackdropPath" />
-                        <input type="hidden" name="releaseDate" asp-for="@movie.ReleaseDate" />
-                        <input type="hidden" name="voteAverage" asp-for="@movie.VoteAverage" />
-                        <input type="hidden" name="voteCount" asp-for="@movie.VoteCount" />
-                        <input type="hidden" name="popularity" asp-for="@movie.Popularity" />
-                        <h4>@movie.Title </h4>
-                        <p>@movie.Popularity</p>
-                        <p>@movie.VoteAverage</p>
-                        <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddMovieToWatchedlist" asp-controller="Movie"> Add to watchedlist</button>
-                        <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddMovieToWishList" asp-controller="Movie"> Add to wishlist </button>
+                        @await Html.PartialAsync("_MovieInputsPartial", movie)
+
+                        @if (Context.Session.GetString("email") != null)
+                        {
+                            <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddMovieToWatchedlist" asp-controller="Movie"> Add to watchedlist</button>
+                            <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddMovieToWishList" asp-controller="Movie"> Add to wishlist </button>
+                        }
+
                         <button type="submit" class="btn btn-info btn-sm mb-2" asp-action="MovieDetail" asp-controller="Movie"><i class="fa fa-eye" aria-hidden="true"></i></button>
                     </form>
                 </div>
@@ -43,7 +36,6 @@
     <h4 class="text-center">Popular TV Shows</h4>
 
     @foreach (var tvShow in Model.TVShows)
-
     {
         if (tvShow.PosterPath != null)
         {
@@ -51,25 +43,16 @@
                 <div id="tvShow">
                     <form method="post">
                         <img src="https://image.tmdb.org/t/p/w500/@tvShow.PosterPath" alt="TV Show Image" />
-                        <input type="hidden" name="id" asp-for="@tvShow.Id" />
-                        <input type="hidden" name="name" asp-for="@tvShow.Name" />
-                        <input type="hidden" name="originalName" asp-for="@tvShow.OriginalName" />
-                        <input type="hidden" name="overview" asp-for="@tvShow.Overview" />
-                        <input type="hidden" name="posterPath" asp-for="@tvShow.PosterPath" />
-                        <input type="hidden" name="backdropPath" asp-for="@tvShow.BackdropPath" />
-                        <input type="hidden" name="firstAirDate" asp-for="@tvShow.FirstAirDate" />
-                        <input type="hidden" name="voteAverage" asp-for="@tvShow.VoteAverage" />
-                        <input type="hidden" name="voteCount" asp-for="@tvShow.VoteCount" />
-                        <input type="hidden" name="popularity" asp-for="@tvShow.Popularity" />
-                        <h4>@tvShow.Name </h4>
-                        <p>@tvShow.Popularity</p>
-                        <p>@tvShow.VoteAverage</p>
-                        <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddTVShowToWatchedlist" asp-controller="TVShow"> Add to watchedlist</button>
-                        <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddTVShowToWishList" asp-controller="TVShow"> Add to wishlist </button>
+                        @await Html.PartialAsync("_TVShowInputsPartial", tvShow)
+
+                        @if (Context.Session.GetString("email") != null)
+                        {
+                            <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddTVShowToWatchedlist" asp-controller="TVShow"> Add to watchedlist</button>
+                            <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddTVShowToWishList" asp-controller="TVShow"> Add to wishlist </button>
+                        }
                         <button type="submit" class="btn btn-info btn-sm mb-2" asp-action="TVShowDetail" asp-controller="TVShow"><i class="fa fa-eye" aria-hidden="true"></i></button>
                     </form>
                 </div>
-
             </div>
         }
     }
