--- a/BooksAndMovies.WebUI/Views/Movie/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/Movie/Index.cshtml
@@ -16,8 +16,12 @@
                         <img src="https://image.tmdb.org/t/p/w500/@movie.PosterPath" alt="movie Image" />
                         @await Html.PartialAsync("_MovieInputsPartial", movie)
 
-                        <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddMovieToWatchedlist"> Add to watchedlist</button>
-                        <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddMovieToWishList"> Add to wishlist </button>
+                        @if (Context.Session.GetString("email") != null)
+                        {
+                            <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddMovieToWatchedlist"> Add to watchedlist</button>
+                            <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddMovieToWishList"> Add to wishlist </button>
+                        }
+
                         <button type="submit" class="btn btn-info btn-sm mb-2" asp-action="MovieDetail"><i class="fa fa-eye" aria-hidden="true"></i></button>
 
                     </form>
