--- a/BooksAndMovies.WebUI/Views/TVShow/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Search.cshtml
@@ -27,9 +27,13 @@
                         <form method="post">
                             <img src="https://image.tmdb.org/t/p/w500/@tvShow.PosterPath" alt="tvShow Image" />
                             @await Html.PartialAsync("_TVShowInputsPartial", tvShow)
+                            @if (Context.Session.GetString("email") != null)
+                            {
+                                <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddTVShowToWishList">Add to Wishlist</button>
+                                <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddTVShowToWatchedList">Add to Watchedlist</button>
+                            }
 
-                            <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddTVShowToWishList">Add to Wishlist</button>
-                            <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddTVShowToWatchedList">Add to Watchedlist</button>
+
                             <button type="submit" class="btn btn-info btn-sm mb-2" asp-action="TVShowDetail"><i class="fa fa-eye" aria-hidden="true"></i></button>
 
                         </form>
