--- a/BooksAndMovies.WebUI/Views/_ViewImports.cshtml
+++ b/BooksAndMovies.WebUI/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using BooksAndMovies.WebUI.ViewModels
 @using BooksAndMovies.WebUI.Models
 @using BooksAndMovies.Entity
+@using Microsoft.AspNetCore.Http;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
